--- a/00 - dragon ball - 09-01-2024/index.html
+++ b/00 - dragon ball - 09-01-2024/index.html
@@ -11,7 +11,9 @@
 <body>
     <h1>EJERCICIO DRAGON BALL</h1>
     <div id="container">
-        <img id="songoku" src="img/goku.jpg" onclick="move();" width="600" height="600"/>
+        <img id="songoku" 
+        src="img/goku.jpg" 
+        onclick="move();" width="600" height="600"/>
         <div id="imgMagia">
             <img id="bola" src="img/goku.jpg" width="150" height="150"/>
         </div>
